# snapp-exchange-bot

./: .env.example  README.md  pyproject.toml  run_bot.py  schema.sql
.github/workflows/: deploy.yml
exchange_money_bot/: config.py  constants.py  database.py  models.py
exchange_money_bot/bot/: keyboards.py  main.py  sell_flow.py
exchange_money_bot/i18n/: __init__.py
exchange_money_bot/locales/: __init__.py  en.py  fa.py
exchange_money_bot/services/: irr_fiat_rates.py  sell_offers.py  telegram_channel.py
scripts/: seed_demo_offers.py
tests/: test_buy_catalog.py
