[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["exchange_money_bot*"]

[project]
name = "exchange-money-bot"
version = "0.1.0"
description = "Telegram bot + API with user signup and data deletion"
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot>=21.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.0.0"]

[tool.ruff]
line-length = 100
target-version = "py39"
